--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ OPENAI_API_KEY = "your-key"
 SOURCE_ZIP = "path-to-your-data-zip"
 DATA_PATH = "your-path-to-extracted-data"
 CHROMA_PATH = "your-path-to-chroma"
+
+MODEL_PATH = "your-model-path"
