Update environment configuration and switch to OpenAI embeddings in the embedding function

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 OPENAI_API_KEY = "your-key"
+OPENAI_MODEL = "gpt-4o"
+OPENAI_EMBEDDINGS_MODEL = "text-embedding-ada-002"
 
 SOURCE_ZIP = "path-to-your-data-zip"
 DATA_PATH = "your-path-to-extracted-data"
