--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 pypdf       # For PDF document loading
 langchain   # For document loading and processing
+langchain-openai # For OpenAI LLMs
 langchain_community # For document loaders and tools
 langchain-chroma # For vector store support
 gpt4all     # For LLMs and embeddings
 gpt4all[cuda] # For GPU support (optional)
+openai 
+tiktoken # For tokenization
