Add email handling functionality and update environment configuration
- Introduced a new script for processing emails using IMAP.
- Updated .env.example to include email account and password variables.
- Modified get_embedding_function.py and query_data.py to use OpenAI embeddings.
- Enhanced README with instructions for model selection and API key management.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ DATA_PATH = "your-path-to-extracted-data"
 CHROMA_PATH = "your-path-to-chroma"
 
 MODEL_PATH = "your-model-path"
+
+# mail-account to check for new DTVP-mails
+# if Gmail, ensure to use an app-password, else login will fail
+EMAIL_ACCOUNT = "your-mail"
+EMAIL_PASSWORD = "your-mail-password"
+EMAIL_FOLDER = "your-folder-or-label"
