Update environment configuration and enhance email handling functionality

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,16 @@ OPENAI_API_KEY = "your-key"
 OPENAI_MODEL = "gpt-4o"
 OPENAI_EMBEDDINGS_MODEL = "text-embedding-ada-002"
 
-SOURCE_ZIP = "path-to-your-data-zip"
-DATA_PATH = "your-path-to-extracted-data"
-CHROMA_PATH = "your-path-to-chroma"
+SOURCE_ZIP = "path-to-your-data-zip" # e.g. "C:/Users/username/Downloads/Vergabeunterlagen_CXP4Y635F4H.zip"
+DATA_PATH = "your-path-to-extracted-data" # e.g. "./temp/bid"
+CHROMA_PATH = "your-path-to-chroma" # e.g. "./chroma"
 
-MODEL_PATH = "your-model-path"
+MODEL_PATH = "your-model-path" # e.g. "./models/Meta-Llama-3-8B-Instruct.Q4_0.gguf"
 
 # mail-account to check for new DTVP-mails
 # if Gmail, ensure to use an app-password, else login will fail
 EMAIL_ACCOUNT = "your-mail"
-EMAIL_PASSWORD = "your-mail-password"
-EMAIL_FOLDER = "your-folder-or-label"
+EMAIL_PASSWORD = "your-mail-password" 
+EMAIL_FOLDER = "your-folder-or-label" # e.g. "DTVP" or "INBOX"
+EMAIL_PATH = "your-path-to-email-data" #for string the mail-content for later retrieval './temp/mail.txt'
+EMAIL_PATH_HTML = "your-path-to-email-data-in-html" #for string the mail-content for later retrieval './temp/mail.html'
