--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ gpt4all[cuda] # For GPU support (optional)
 openai 
 tiktoken # For tokenization
 imap-tools # For email loading and processing
+beautifulsoup4 # For HTML parsing
+lxml # For HTML parsing
