--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ openai
 tiktoken # For tokenization
 imap-tools # For email loading and processing
 beautifulsoup4 # For HTML parsing
+bs4 # For HTML parsing
 lxml # For HTML parsing
