Add script to update ESR presentation slides
- Implemented functionality to load a PowerPoint template using dotenv.
- Added a function to update the text of a specific textbox on a slide.
- Included a save function to save the modified presentation to a specified path.
- Demonstrated usage by updating a textbox and saving the presentation.

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ EMAIL_PASSWORD = "your-mail-password"
 EMAIL_FOLDER = "your-folder-or-label" # e.g. "DTVP" or "INBOX"
 EMAIL_PATH = "your-path-to-email-data" #for string the mail-content for later retrieval './temp/mail.txt'
 EMAIL_PATH_HTML = "your-path-to-email-data-in-html" #for string the mail-content for later retrieval './temp/mail.html'
+
+TEMPLATE_ESR_A = "your-template-for-esr-a" # e.g. "./templates/ESR-A_TEMPLATE.pptx"
+TEMPLATE_ESR_B = "your-template-for-esr-b" # e.g. "./templates/ESR-B_TEMPLATE.pptx"
+TEMPLATE_ESR_C = "your-template-for-esr-c" # e.g. "./templates/ESR-C_TEMPLATE.pptx"
