Add OPENAI_MODEL variable to .env.example for model configuration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY = "your-key"
+OPENAI_MODEL = "gpt-4.1"
 OPENAI_EMBEDDINGS_MODEL = "text-embedding-ada-002"
 
 SOURCE_ZIP = "path-to-your-data-zip" # e.g. "C:/Users/username/Downloads/Vergabeunterlagen_CXP4Y635F4H.zip"
